[project]
name = "ember_mug_component"
readme = "README.md"
description = "Home Assistant Custom Integration for Ember Mugs."
authors = [{ name = "Jesse Sopel", email = "jesse@sopelj.ca" }]
license = { file = "LICENSE.md" }
requires-python = ">=3.14"
dynamic = ["version"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "homeassistant>=2026.6.0b0",
    "bleak-retry-connector>=4.6.1",
    "bleak>=3.0.2",
    "python-ember-mug==1.4.0b2",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.0",
    "pytest-cov>=3.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-homeassistant-custom-component>=0.13.334",
    # Requirements for HASS
    "aioesphomeapi>=45.3.1",
    "aiousbwatcher>=1.1.2",
    "serialx>=1.8.0",                 # For HASS serial component
]

[project.urls]
"Source code" = "https://github.com/sopelj/hass-ember-mug-component/"
"Bug Tracker" = "https://github.com/sopelj/hass-ember-mug-component/issues"
"Changelog" = "https://github.com/sopelj/hass-ember-mug-component/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "custom_components/ember_mug/manifest.json"
pattern = "\\s+\"version\": \"(?P<version>[^\"]+)"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["custom_component/ember_mug"]

[tool.hatch.envs.default]
python = "3.14"

[tool.hatch.envs.test]
features = ["test"]

[[tool.hatch.envs.test.matrix]]
python = ["3.14"]
homeassistant = ["2026.6.0b0"]

[tool.hatch.envs.test.scripts]
cov = "pytest --asyncio-mode=auto --cov=custom_components --cov-branch --cov-report=xml --cov-report=term-missing tests -vvv"
no-cov = "cov --no-cov"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "def main",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]

[tool.ruff]
fix = true
line-length = 120
target-version = "py314"
[tool.ruff.lint]
select = [
    "A",
    "ASYNC",
    "B",
    "COM",
    "C4",
    "D",
    "E",
    "ERA",
    "F",
    "FA",
    "FLY",
    "G",
    "I",
    "N",
    "PTH",
    "PT",
    "PL",
    "PLE",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SLF",
    "SIM",
    "TD",
    "TCH",
    "UP",
    "TRY"
]
ignore = ["D203", "D212", "PLR2004", "PLR0913", "RUF012", "TRY003"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D103",   # No docstrings in tests needed
    "S101",   # We needs asserts in tests
    "SLF001",
]

[tool.mypy]
ignore_errors = true
ignore_missing_imports = false
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pytest]
minversion = "9.0"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
